ADD_EXECUTABLE(roccatarvocontrol arvocontrol.c)

TARGET_LINK_LIBRARIES(roccatarvocontrol
  libroccatarvo
  libroccat
  ${GLIB2_LIBRARIES}
)

INSTALL(TARGETS roccatarvocontrol
  DESTINATION bin
  PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
)

ADD_SUBDIRECTORY(man)
